# mangasama

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
app/: __init__.py  cli.py  deps.py  logging_config.py  main.py  settings.py
app/api/: __init__.py  admin_settings.py  chapters.py  covers.py  exception_handlers.py  follow.py  jobs.py  libraries.py  opds.py  router.py  search.py  series.py  settings_api.py  setup.py
app/core/: __init__.py  auth.py  exceptions.py  hashing.py  http_client.py  italian.py  paths.py  rate_limiter.py  setup_state.py
app/db/: __init__.py  base.py  init.py  session.py
app/metadata/: __init__.py  anilist.py  base.py  cover_cache.py  googlebooks.py  mangadex.py  merger.py
app/models/: __init__.py  orm.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: __init__.py  admin_settings.py  chapter.py  follow.py  job.py  library.py  search.py  series.py  settings_api.py  setup.py
app/scrapers/: __init__.py  base.py  cloudflare.py  cookies.py  domain_registry.py  mangadex.py  mangaworld.py  registry.py  source_policy.py
app/services/: backup.py  cbz.py  chapter.py  comicinfo.py  downloader.py  folder_strategy.py  follow.py  health.py  images.py  job_events.py  language_picker.py  library.py  opds.py  search.py  series.py  settings_api.py
config/: default.yaml  logging.yaml  sources.yaml
docker/: Dockerfile  entrypoint.sh
docs/: api.md  architecture.md  comicinfo.md  sources.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/api/: authFetch.ts  client.ts
frontend/src/components/: AppShell.vue  AuthCoverImage.vue  ChapterList.vue  EmptyState.vue  ErrorPanel.spec.ts  ErrorPanel.vue  FollowButton.spec.ts  FollowButton.vue  JobBadge.spec.ts  JobBadge.vue  LibraryForm.vue  ProviderStatusBadge.vue  SearchDialog.vue  SeriesCard.vue  Sidebar.vue  SkeletonCard.vue
frontend/src/composables/: useModalA11y.ts  (+2 more)
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_seed_sources.py
tests/: conftest.py  test_api_chapters.py  test_api_follow.py  test_api_jobs.py  test_api_libraries.py  test_api_search.py  test_api_series.py  test_api_settings.py  test_auth.py  test_backup.py  test_cbz.py  test_cloudflare.py  test_comicinfo.py  test_cover_cache.py  test_downloader.py  test_exception_handlers.py  test_folder_strategy.py  test_follow.py  test_health.py  test_images.py  test_job_events.py  test_language_picker.py  test_metadata_anilist.py  test_metadata_googlebooks.py  test_metadata_mangadex.py  test_metadata_merger.py  test_migrations.py  test_opds.py  test_scheduler.py  test_scrapers_mangadex.py  test_scrapers_mangaworld.py  test_security_headers.py  test_smoke.py  test_source_policy.py
tests/frontend/: smoke.js
(+22 files in other folders)
