[project]
name = "mangasama"
version = "0.1.0"
description = "Personal archival manga downloader - Italian-first sources, multi-library, follow scheduler, CBZ output, OPDS catalog"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "MangaSama" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # HTTP + scraping
    "httpx[http2]>=0.27",
    "parsel>=1.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    # Scheduler
    "apscheduler>=3.10",
    # Image processing
    "Pillow>=11.0",
    # Async helpers
    "aiofiles>=24.1",
    "aiolimiter>=1.1",
    # Config
    "pyyaml>=6.0",
    # Reliability
    "tenacity>=9.0",
    # Logging
    "structlog>=24.4",
    # Utilities
    "python-dateutil>=2.9",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-Pillow",
    "types-python-dateutil",
    "types-PyYAML",
]
playwright = [
    "playwright>=1.48",
]

[project.scripts]
mangasama = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["app/web", "frontend", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "ASYNC", "TCH"]
ignore = [
    "E501",   # line length (handled by editor)
    "B008",   # function call in default arg (FastAPI Depends/Query idiom)
    "B905",   # zip strict=
    # --- deliberate project choices ---
    "TC001",  # typing-only first-party import: keep direct imports — Pydantic/SQLAlchemy
    "TC002",  # typing-only third-party import:  resolve annotations at runtime, and the
    "TC003",  # typing-only stdlib import:        repo convention is plain imports, not TYPE_CHECKING
    "N818",   # exception names without "Error" suffix are intentional (SeriesNotFound, RateLimited, …)
    "ASYNC240",  # cheap Path.stat/exists in async fns — not worth a thread offload
    "RUF012",  # mutable class defaults are fine for our ORM/dataclass attrs
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E", "F"]
"tests/*" = ["B", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["app/web", "frontend", "migrations/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/web/*", "app/cli.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
